# my_Mprpc

./: CMakeLists.txt
example/: CMakeLists.txt  friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: lockqueue.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  rpcprovider.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: logger.h  zookeeperutil.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
